--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "autoprefixer": "^10.0.2",
+    "autoprefixer": "^9.8.6",
     "next": "10.0.2",
-    "postcss": "^8.1.8",
+    "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@storybook/addon-actions": "^6.1.1",
+    "@storybook/addon-essentials": "^6.1.1",
+    "@storybook/addon-links": "^6.1.1",
+    "@storybook/react": "^6.1.1",
     "@types/node": "^14.14.9",
     "@types/react": "^16.9.56",
+    "babel-loader": "^8.2.1",
     "typescript": "^4.1.2"
   }
 }
