--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "recoil": "^0.1.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
