--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
+    "bootstrap": "^5.0.0-alpha3",
     "firebase": "^8.1.1",
     "next": "10.0.2",
     "postcss": "^7.0.35",
