--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-toastify": "^6.1.0",
     "recoil": "^0.1.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
