--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "autoprefixer": "^9.8.6",
     "bootstrap": "^5.0.0-alpha3",
+    "dayjs": "^1.9.6",
     "firebase": "^8.1.1",
     "next": "10.0.2",
     "postcss": "^7.0.35",
