--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
     "dayjs": "^1.9.6",
     "firebase": "^8.1.1",
