--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
     "bootstrap": "^5.0.0-alpha3",
+    "canvas": "^2.6.1",
     "dayjs": "^1.9.6",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
